--- a/formula_restful/pom.xml
+++ b/formula_restful/pom.xml
@@ -5,23 +5,28 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.4.RELEASE</version>
+		<version>2.0.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>cn.spring.sayroom</groupId>
-	<artifactId>global</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>basemodel</name>
-	<description>Demo project for Spring Boot</description>
-	<modules>
-
-	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+
 	</properties>
+	<groupId>cn.spring.sayroom</groupId>
+	<artifactId>global</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>basemodel</name>
+    <packaging>pom</packaging>
+	<description>Demo project for Spring Boot</description>
+	<modules>
+		<module>eureka-server</module>
+		<module>eureka-client</module>
+		<module>config-server</module>
+	</modules>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -40,10 +45,9 @@
             <artifactId>spring-boot-starter-web</artifactId>
 
         </dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
 		<dependency>
@@ -59,6 +63,24 @@
         </dependency>
         <!--fastjson数据配置 end-->
 	</dependencies>
+	<repositories>
+		<repository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>https://repo.spring.io/snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 	<pluginRepositories>
 		<pluginRepository>
