bykey函数修改完成

--- a/formula_restful/config-server/src/main/resources/bootstrap.yml
+++ b/formula_restful/config-server/src/main/resources/bootstrap.yml
@@ -3,5 +3,10 @@ spring:
     name: config-server
   profiles:
     active: native
+  cloud:
+    config:
+      server:
+        native:
+          search-locations: classpath:/config
 server:
   port: 8888
