--- a/formula_restful/eureka-server/src/main/resources/application.yml
+++ b/formula_restful/eureka-server/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 eureka:
   server:
-    peer-eureka-nodes-update-interval-ms: 10000 #默认是10分钟即600000，这里为了验证改为10秒
+    use-read-only-response-cache: false
+    response-cache-auto-expiration-in-seconds: 10
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
