--- a/formula_restful/gateway/src/main/resources/application.yml
+++ b/formula_restful/gateway/src/main/resources/application.yml
@@ -1,9 +1,6 @@
 spring:
   application:
-    name: eureka-server
-  cloud:
-    config:
-      uri: http://localhost:8888
+    name: zuul-gateway
 management:
   endpoints:
     web:
