--- a/formula_restful/pom.xml
+++ b/formula_restful/pom.xml
@@ -25,6 +25,7 @@
 		<module>eureka-server</module>
 		<module>eureka-client</module>
 		<module>config-server</module>
+		<module>gateway</module>
 	</modules>
 
 	<dependencyManagement>
