--- a/react/ECMAScript/.vscode/launch.json
+++ b/react/ECMAScript/.vscode/launch.json
@@ -7,10 +7,10 @@
         
 
         {
-            "name": "Launch",
+            "name": "js调试",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/javascript-base/datatype.js",
+            "program": "${workspaceRoot}/javascript-base/main.js",
             "stopOnEntry": false,
             "args": [],
             "cwd": "${workspaceRoot}",
@@ -27,6 +27,19 @@
             "type": "node",
             "request": "attach",
             "port": 5858
+        },
+        {
+            "name": "使用本机 Chrome 调试",
+            "type": "chrome",
+            "request": "launch",
+             "file": "${workspaceRoot}/index.html",
+        //  "url": "http://mysite.com/index.html", //使用外部服务器时,请注释掉 file, 改用 url, 并将 useBuildInServer 设置为 false "http://mysite.com/index.html
+            "runtimeExecutable": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe", // 改成您的 Chrome 安装路径
+            "sourceMaps": true,
+            "webRoot": "${workspaceRoot}",
+        //  "preLaunchTask":"build",
+            "userDataDir":"${tmpdir}",
+            "port":5433
         }
 
 
