问题修改-第三版修改
Signed-off-by: wangzhqa <wangzhqa@yonyou.com>

--- a/mky_project/build.xml
+++ b/mky_project/build.xml
@@ -157,6 +157,13 @@
 			<classpath refid="classpath">
 			</classpath>
 		</javac>
+		
+		<!-- 2. riart client -->
+		<javac srcdir="${module.riart}/src/client" destdir="${hotwebs}/nccloud/WEB-INF/classes" includeantruntime="on">
+			<compilerarg line="-encoding GBK" />
+			<classpath refid="classpath">
+			</classpath>
+		</javac>
 
 
 
